# naval-chess-ai

./: README.md  aggregate.py  docker-compose.yml  frontend.txt  output.txt  package-lock.json
ai_trainer/: requirements.txt  train.py
backend/: .dockerignore  Dockerfile  README.md  ai.py  app.py  app_test.py  app_test2.py  dockerfile  pyproject.toml  requirements.txt
backend/ai/: battleship_board.py  dqn_battleship.py  env.py  evaluate.py  evaluate_dqn.py  evaluate_method.py  utils.py
backend/instance/: naval_chess.db
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/components/: Board.tsx  GameBoard.tsx  Piece.tsx  ShipOverlay.tsx  Sidebar.tsx  StatusPanel.tsx  VictoryConfetti.tsx
frontend/src/store/: gameStore.ts
frontend/src/types/: global.d.ts
frontend/src/utils/: board.ts
test/: dqn_battleship.py  dqn_battleship_cnn.pth  dqn_new.py  placeshipboard.py
