[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eventlet>=0.40.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "torch>=2.8.0",
]
